--- a/WebApplication1/Web.Debug.config
+++ b/WebApplication1/Web.Debug.config
@@ -26,5 +26,31 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-  </system.web>
+    <httpHandlers>
+      
+    <add path="ChartImg.axd" verb="GET,HEAD,POST"
+      type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler,
+      System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, 
+      PublicKeyToken=31bf3856ad364e35" validate="false" />
+    </httpHandlers>
+    
+    <pages>
+      <controls> 
+         <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture:neutral, 
+          PublicKeyToken=31bf3856ad364e35" />
+      </controls>
+    </pages>
+
+    <compilation>
+      <assemblies>
+            <add assembly="System.Web.DataVisualization, Version=4.0.0.0, 
+            Culture:neutral, PublicKeyToken=31bf3856ad364e35"/>
+      </assemblies>
+    </compilation>
+    
+    
+      </system.web>
+  
 </configuration>
