--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -66,7 +66,7 @@
   <!-- CONNECTION STRING HERE!!!-->
   <appSettings>
     <!--dxxxxxxxxxxxxxxx-->
-    <add key="ChartImageHandler" value="storage=file;timeout=20;"/>  <!--dir=c:\TempImageFiles\;-->
+    <!--<add key="ChartImageHandler" value="storage=file;timeout=20;"/>-->  <!--dir=c:\TempImageFiles\;-->
     <!--dxxxxxxxxxxxxxxxxxxxxxxxx-->
     <!--sb.Server = "f37fa280-507d-4166-b70e-a427013f0c94.mysql.sequelizer.com";
     sb.UserID = "lewtprebbcrycgkb";
