--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -67,7 +67,7 @@
   <appSettings>
     
     <!--dxxxxxxxxxxxxxxx-->
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=images\;"/>  <!--;-->
+    <add key="ChartImageHandler" value="storage=file;timeout=20; url=images/;"/>  <!--;-->
     <!--dxxxxxxxxxxxxxxxxxxxxxxxx-->
     <!--sb.Server = "f37fa280-507d-4166-b70e-a427013f0c94.mysql.sequelizer.com";
     sb.UserID = "lewtprebbcrycgkb";
