--- a/WebApplication1/FinalProject.csproj
+++ b/WebApplication1/FinalProject.csproj
@@ -39,8 +39,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data">
       <HintPath>..\packages\MySql.Data.6.9.6\lib\net45\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Fakes">
+      <HintPath>FakesAssemblies\MySql.Data.Fakes.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
@@ -116,6 +120,7 @@
     <Content Include="Pages\Site.Master" />
     <Content Include="Pages\SiteStudent.Master" />
     <Content Include="packages.config" />
+    <Fakes Include="Fakes\MySql.Data.fakes" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
