--- a/WebApplication1/FinalProject.csproj
+++ b/WebApplication1/FinalProject.csproj
@@ -46,6 +46,14 @@
     <Reference Include="MySql.Data.Fakes">
       <HintPath>FakesAssemblies\MySql.Data.Fakes.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.0.0\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -56,6 +64,14 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.0.0\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.0.0\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -109,6 +125,7 @@
     <Content Include="js\tms_presets.js" />
     <Content Include="Pages\HomePageStudent.aspx" />
     <Content Include="Pages\ProfileStudent.aspx" />
+    <Content Include="Pages\ShowQuestionnaire.aspx" />
     <Content Include="Pages\StatisticStudent.aspx" />
     <Content Include="Pages\StockQuestionnaires.aspx" />
     <Content Include="Pages\Register.aspx" />
@@ -177,6 +194,12 @@
       <DependentUpon>ProfileStudent.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Questionnaire.cs" />
+    <Compile Include="Pages\ShowQuestionnaire.aspx.cs">
+      <DependentUpon>ShowQuestionnaire.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ShowQuestionnaire.aspx.designer.cs">
+      <DependentUpon>ShowQuestionnaire.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\SiteStudent.Master.cs">
       <DependentUpon>SiteStudent.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
