--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
     </httpHandlers>
@@ -67,7 +67,7 @@
   <appSettings>
     
     <!--dxxxxxxxxxxxxxxx-->
-    <add key="ChartImageHandler" value="storage=file;timeout=20;"/> 
+    <add key="ChartImageHandler" value="storage=file;timeout=20;" /> 
     <!--dxxxxxxxxxxxxxxxxxxxxxxxx-->
     <!--sb.Server = "f37fa280-507d-4166-b70e-a427013f0c94.mysql.sequelizer.com";
     sb.UserID = "lewtprebbcrycgkb";
@@ -92,7 +92,7 @@
     <handlers>
       <remove name="ChartImageHandler" />
       <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-    </handlers>
+    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
