add profile image

--- a/WebApplication1/Clicker.csproj
+++ b/WebApplication1/Clicker.csproj
@@ -106,6 +106,7 @@
     <Content Include="images\numb-1.gif" />
     <Content Include="images\numb-2.gif" />
     <Content Include="images\numb-3.gif" />
+    <Content Include="images\profile.gif" />
     <Content Include="images\txed.jpg" />
     <Content Include="images\whitestar.gif" />
     <Content Include="images\yellowstar.gif" />
